# python_template

./: .cspell.json  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint-pull-request.yaml  pre-commit.yaml
dictionaries/: person-names.txt  programming-terms.txt
projects/prj0/: pyproject.toml
projects/prj0/src/prj0/: __init__.py
